--- a/WpfApp5/MainWindow.xaml
+++ b/WpfApp5/MainWindow.xaml
@@ -6,7 +6,11 @@
         xmlns:local="clr-namespace:WpfApp5"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    
+    <Window.CommandBindings>
+        <CommandBinding Command="local:MyCommands.Exit" Executed="ExitExecuted"/>
+        <CommandBinding Command="Open" Executed="OpenExecuted"/>
+        <CommandBinding Command="Save" Executed="SaveExecuted"/>
+    </Window.CommandBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -15,14 +19,15 @@
         </Grid.RowDefinitions>
         <Menu Height="25" VerticalAlignment="Top">
             <MenuItem Header="Файл">
-                <MenuItem Header="_Открыть" Click="MenuItem_Click" />
-                <MenuItem Header="_Сохранить" Click="MenuItem_Click_1" />
+                <MenuItem Header="Открыть" Command="ApplicationCommands.Open" />
+                <MenuItem Header="Сохранить" Command="Save" />
                 <Separator />
-                <MenuItem Header="_Закрыть" Click="MenuItem_Click_2" />
+                <MenuItem Command="local:MyCommands.Exit"/>
+
             </MenuItem>
         </Menu>
         <ToolBarTray Grid.Row="1">
-            <ToolBar Margin="5" Padding="5">
+            <ToolBar Margin="2" Padding="2">
                 <ComboBox Margin="5" Padding="5" SelectedIndex="0" Width="200" SelectionChanged="ComboBox_SelectionChanged">
                     <TextBlock Text="Arial"/>
                     <TextBlock Text="Times New Roman"/>
@@ -34,21 +39,21 @@
                     <TextBlock Text="16"/>
                 </ComboBox>
             </ToolBar>
-            <ToolBar Margin="5" Padding="5">
-                <Button Height="25" Width="25" Click="Button_Click">
+            <ToolBar Margin="2" Padding="2">
+                <ToggleButton Height="25" Width="25" Click="Button_Click" IsChecked="False">
                     <Image Source="Data/bold.png"/>
-                </Button>
+                </ToggleButton>
                 <Separator/>
-                <Button Height="25" Width="25" Click="Button_Click_1">
+                <ToggleButton Height="25" Width="25" Click="Button_Click_1">
                     <Image Source="Data/italics.png"/>
-                </Button>
+                </ToggleButton>
                 <Separator/>
-                <Button Height="25" Width="25" Click="Button_Click_2">
+                <ToggleButton Height="25" Width="25" Click="Button_Click_2">
                     <Image Source="Data/underline.png"/>
-                </Button>
+                </ToggleButton>
 
             </ToolBar>
-            <ToolBar Margin="5" Padding="5">
+            <ToolBar Margin="2" Padding="2">
                 <StackPanel VerticalAlignment="Center">
                     <RadioButton Content="Черный" IsChecked="True" Checked="RadioButton_Checked"/>
                     <RadioButton Content="Красный" Checked="RadioButton_Checked_1"/>
