--- a/WpfApp5/Dark.xaml
+++ b/WpfApp5/Dark.xaml
@@ -1,12 +1,36 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="WindowStyle">
-        <Setter Property="Control.Background" Value="DimGray"/>
-        <Setter Property="Control.Foreground" Value="White"/>
+   
+    <SolidColorBrush x:Key="Bg" Color="DimGray"/>
+    <SolidColorBrush x:Key="Fg" Color="White"/>
+    
+    <Style TargetType="TextBox">
+        <Setter Property="Background" Value="{StaticResource Bg}"/>
+        <Setter Property="Foreground" Value="{StaticResource Fg}"/>
     </Style>
 
-    <Style x:Key="TextBoxStyle">
-        <Setter Property="TextBox.Foreground" Value="White"/>
-        <Setter Property="TextBox.Background" Value="Black"/>
+    <Style TargetType="ToolBar">
+        <Setter Property="Background" Value="{StaticResource Bg}"/>
     </Style>
+    <Style TargetType="ToolBarTray">
+        <Setter Property="Background" Value="{StaticResource Bg}"/>
+    </Style>
+
+    <Style TargetType="Menu">
+        <Setter Property="Background" Value="{StaticResource Bg}"/>
+        <Setter Property="Foreground" Value="{StaticResource Fg}"/>
+    </Style>
+    <Style TargetType="MenuItem">
+        <Setter Property="Background" Value="{StaticResource Bg}"/>
+        <Setter Property="Foreground" Value="{StaticResource Fg}"/>
+    </Style>
+    <Style TargetType="ComboBox" x:Name="cbStyle">
+        <Setter Property="Background" Value="{StaticResource Bg}"/>
+        <Setter Property="Foreground" Value="{StaticResource Fg}"/>
+    </Style>
+    <Style TargetType="ComboBoxItem">
+        <Setter Property="Background" Value="{StaticResource Bg}"/>
+        <Setter Property="Foreground" Value="{StaticResource Fg}"/>
+    </Style>
+
 </ResourceDictionary>
