--- a/WpfApp5/Light.xaml
+++ b/WpfApp5/Light.xaml
@@ -1,10 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="WindowStyle">
-        <Setter Property="Control.Background" Value="White"/>
+    <SolidColorBrush x:Key="Bg" Color="White"/>
+    <SolidColorBrush x:Key="Fg" Color="Black"/>
+
+    <Style TargetType="ComboBox" x:Name="cbStyle">
+        <Setter Property="Background" Value="{StaticResource Bg}"/>
+        <Setter Property="Foreground" Value="{StaticResource Fg}"/>
     </Style>
-    <Style x:Key="TextBoxStyle">
-        <Setter Property="TextBox.Foreground" Value="Black"/>
-        <Setter Property="TextBox.Background" Value="White"/>
-    </Style>
+
 </ResourceDictionary>
