--- a/WpfApp5/MainWindow.xaml
+++ b/WpfApp5/MainWindow.xaml
@@ -8,18 +8,7 @@
         xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Window.Resources>
-        <col:ArrayList x:Key="fonts">
-            <sys:String>Arial</sys:String>
-            <sys:String>Times New Roman</sys:String>
-            <sys:String>Helvetica</sys:String>
-        </col:ArrayList>
-        <col:ArrayList x:Key="fontSizes">
-            <sys:Int32>12</sys:Int32>
-            <sys:Int32>14</sys:Int32>
-            <sys:Int32>16</sys:Int32>
-        </col:ArrayList>
-    </Window.Resources>
+
     <Window.CommandBindings>
         <CommandBinding Command="local:MyCommands.Exit" Executed="ExitExecuted"/>
         <CommandBinding Command="Open" Executed="OpenExecuted"/>
@@ -31,23 +20,24 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+        
         <Menu Height="25" VerticalAlignment="Top">
             <MenuItem Header="Файл">
                 <MenuItem Header="Открыть" Command="ApplicationCommands.Open" />
                 <MenuItem Header="Сохранить" Command="Save" />
-                <Separator />
+                <Separator/>
                 <MenuItem Command="local:MyCommands.Exit"/>
-
             </MenuItem>
         </Menu>
+        
         <ToolBarTray Grid.Row="1">
             <ToolBar Margin="2" Padding="2">
                 <ComboBox Margin="5" Padding="5" SelectedIndex="0" Width="200" SelectionChanged="ComboBox_SelectionChanged" 
-                          ItemsSource="{StaticResource fonts}"/>
-
+                          ItemsSource="{StaticResource fonts}"
+                          Style="{DynamicResource cbStyle}"/>
                 <ComboBox Margin="5" Padding="5" SelectedIndex="2" Width="50" SelectionChanged="ComboBox_SelectionChanged_1"
-                          ItemsSource="{StaticResource fontSizes}"/>
-
+                          ItemsSource="{StaticResource fontSizes}"
+                          Style="{DynamicResource cbStyle}"/>
             </ToolBar>
             <ToolBar Margin="2" Padding="2">
                 <ToggleButton Height="25" Width="25" Click="Button_Click" IsChecked="False">
@@ -61,7 +51,6 @@
                 <ToggleButton Height="25" Width="25" Click="Button_Click_2">
                     <Image Source="Data/underline.png"/>
                 </ToggleButton>
-
             </ToolBar>
             <ToolBar Margin="2" Padding="2">
                 <StackPanel VerticalAlignment="Center">
@@ -70,8 +59,25 @@
                 </StackPanel>
             </ToolBar>
         </ToolBarTray>
-        <TextBox x:Name="textBox" Grid.Row="2" Margin="5" Padding="5" FontSize="16" FontFamily="Arial" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto">
-
+        
+        <TextBox x:Name="textBox"
+                 Grid.Row="2"
+                 Margin="5" Padding="5"
+                 FontSize="16"
+                 FontFamily="Arial"
+                 TextWrapping="Wrap"
+                 VerticalScrollBarVisibility="Auto">
         </TextBox>
+        
+        <ComboBox x:Name="ColorThemes"
+                  SelectedIndex="1"
+                  Width="100"
+                  HorizontalAlignment="Right"
+                  Margin="0,15,20,15"
+                  Grid.Row="1" SelectionChanged="ColorThemes_SelectionChanged"
+                  Style="{DynamicResource cbStyle}">
+            <ComboBoxItem Content="Светлая тема"/>
+            <ComboBoxItem Content="Темная тема"/>
+        </ComboBox>
     </Grid>
 </Window>
