--- a/WpfApp5/Light.xaml
+++ b/WpfApp5/Light.xaml
@@ -1,11 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="Bg" Color="White"/>
-    <SolidColorBrush x:Key="Fg" Color="Black"/>
 
-    <Style TargetType="ComboBox" x:Name="cbStyle">
-        <Setter Property="Background" Value="{StaticResource Bg}"/>
-        <Setter Property="Foreground" Value="{StaticResource Fg}"/>
-    </Style>
-
+    <!--включается как светлая тема по умолчанию-->
 </ResourceDictionary>
